--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/zup_contas
+
+spring.datasource.username=root
+spring.datasource.password=Evellyin.65220284
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
